<resources>
    <string name="app_name">Mova movie app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_mova">Welcome to Mova</string>
    <string name="get_started">Get Started</string>
    <string name="the_best_movie_streaming_app_of_the_century_to_make_your_days_great">The best movie streaming app of the century to make your days great!</string>
    <string name="let_s_you_in">Let’s you in</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="or">or</string>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up_01">Sign up</string>
    <string name="or_continue_with">or continue with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="top_10_movies_this_week">Top 10 Movies This Week</string>
    <string name="see_all">See all</string>
    <string name="will_be_changed">Will be changed</string>
    <string name="notification">Notification</string>
    <string name="episode_2">Episode 2</string>
    <string name="search">Search</string>
    <string name="not_found">Not Found</string>
    <string name="not_found_text">Sorry, the keyword you entered could not be found. Try to check again or search with other keywords.</string>
    <string name="download">Download</string>
    <string name="play">Play</string>
    <string name="genre">Genre:</string>
    <string name="description">Description</string>
    <string name="trailers">Trailers</string>
    <string name="more_like_this">More Like This</string>
    <string name="comments">Comments</string>
    <string name="my_list">My List</string>
    <string name="your_list_is_empity">Your List Is Empity</string>
    <string name="it_seems_that_you_haven_t_added_any_movies_to_the_list">It seems that you haven\'t added any movies to the list</string>
    <string name="new_releases">New Releases</string>
    <string name="sad">sad</string>
    <string name="sort_filter"><![CDATA[Sort & Filter]]></string>
    <string name="genres">Genres</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="done">Done</string>
    <string name="log_out">Log Out</string>
    <string name="discover_these">Discover These</string>
</resources>